--- a/cours_1/cours_0.vcxproj
+++ b/cours_1/cours_0.vcxproj
@@ -141,6 +141,9 @@
   <ItemGroup>
     <ClCompile Include="cours_0.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="IntArray.hpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
