StringFunctions.hpp created

--- a/cours_1/cours_0.vcxproj.filters
+++ b/cours_1/cours_0.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="Vec.hpp">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="StringFunctions.hpp">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
