--- a/cours_1/cours_0.vcxproj.filters
+++ b/cours_1/cours_0.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="cours_0.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="IntArray.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="IntArray.hpp">
