IntTree practically fixed

--- a/cours_1/cours_0.vcxproj.filters
+++ b/cours_1/cours_0.vcxproj.filters
@@ -31,7 +31,7 @@
       <Filter>Fichiers sources</Filter>
     </ClCompile>
     <ClCompile Include="IntTree.cpp">
-      <Filter>Fichiers d%27en-tête</Filter>
+      <Filter>Fichiers sources</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
