--- a/cours_3/cours_0.vcxproj.filters
+++ b/cours_3/cours_0.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="LinkedList.hpp">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="BinaryTree.hpp">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
