--- a/cours_4/cours_0.vcxproj
+++ b/cours_4/cours_0.vcxproj
@@ -161,7 +161,9 @@
     <ClCompile Include="Lib.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Catmull.hpp" />
     <ClInclude Include="Lib.hpp" />
+    <ClInclude Include="Line.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
