--- a/cours_6/cours_0.vcxproj
+++ b/cours_6/cours_0.vcxproj
@@ -159,10 +159,12 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Lib.cpp" />
+    <ClCompile Include="Turtle.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Catmull.hpp" />
     <ClInclude Include="Lib.hpp" />
+    <ClInclude Include="Turtle.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
