--- a/cours_6/cours_0.vcxproj.filters
+++ b/cours_6/cours_0.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClInclude Include="Turtle.hpp">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="CmdId.hpp">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
