--- a/cours_6/cours_0.vcxproj
+++ b/cours_6/cours_0.vcxproj
@@ -163,7 +163,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Catmull.hpp" />
-    <ClInclude Include="CmdId.hpp" />
+    <ClInclude Include="CmdFile.hpp" />
     <ClInclude Include="Lib.hpp" />
     <ClInclude Include="Turtle.hpp" />
   </ItemGroup>
