--- a/cours_6/cours_0.vcxproj.filters
+++ b/cours_6/cours_0.vcxproj.filters
@@ -35,7 +35,7 @@
     <ClInclude Include="Turtle.hpp">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
-    <ClInclude Include="CmdId.hpp">
+    <ClInclude Include="CmdFile.hpp">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
   </ItemGroup>
