--- a/cours_7/cours_0.vcxproj.filters
+++ b/cours_7/cours_0.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="libs\imgui\imgui_demo.cpp">
       <Filter>ImGui</Filter>
     </ClCompile>
+    <ClCompile Include="Entity.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Lib.hpp">
@@ -55,6 +58,12 @@
     </ClInclude>
     <ClInclude Include="libs\imgui-sfml\imgui-SFML_export.h">
       <Filter>ImGui</Filter>
+    </ClInclude>
+    <ClInclude Include="Entity.hpp">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="Cst.hpp">
+      <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
