--- a/cours_7/imgui.ini
+++ b/cours_7/imgui.ini
@@ -4,7 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=672,90
+Pos=659,194
 Size=550,680
+Collapsed=0
+
+[Window][debug]
+Pos=1408,215
+Size=263,390
 Collapsed=0
 
