--- a/cours_7/cours_0.vcxproj.filters
+++ b/cours_7/cours_0.vcxproj.filters
@@ -71,5 +71,8 @@
     <ClInclude Include="World.hpp">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="WorldFile.hpp">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
