--- a/cours9Reprise/ConsoleApplication1.vcxproj.filters
+++ b/cours9Reprise/ConsoleApplication1.vcxproj.filters
@@ -98,5 +98,8 @@
     <ClInclude Include="Dijkstra.hpp">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="A_etoile.hpp">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
