--- a/Shape/imgui.ini
+++ b/Shape/imgui.ini
@@ -9,7 +9,32 @@ Size=550,680
 Collapsed=0
 
 [Window][Debug]
-Pos=1509,455
+Pos=1539,639
 Size=349,410
+Collapsed=0
+
+[Window][Player]
+Pos=1563,39
+Size=303,220
+Collapsed=1
+
+[Window][UI]
+Pos=1544,657
+Size=307,210
+Collapsed=0
+
+[Window][Truc]
+Pos=60,60
+Size=239,158
+Collapsed=0
+
+[Window][ruc]
+Pos=455,331
+Size=196,180
+Collapsed=0
+
+[Window][uc]
+Pos=633,119
+Size=288,185
 Collapsed=0
 
