--- a/Shape/imgui.ini
+++ b/Shape/imgui.ini
@@ -19,12 +19,12 @@ Size=303,220
 Collapsed=1
 
 [Window][UI]
-Pos=1544,657
+Pos=1544,658
 Size=307,210
 Collapsed=0
 
 [Window][Truc]
-Pos=60,60
+Pos=184,172
 Size=239,158
 Collapsed=0
 
@@ -36,5 +36,70 @@ Collapsed=0
 [Window][uc]
 Pos=633,119
 Size=288,185
+Collapsed=0
+
+[Window][Button test]
+Pos=524,128
+Size=349,360
+Collapsed=0
+
+[Window][B]
+Pos=60,60
+Size=114,134
+Collapsed=0
+
+[Window][b]
+Pos=60,60
+Size=114,134
+Collapsed=0
+
+[Window][br]
+Pos=60,60
+Size=114,134
+Collapsed=0
+
+[Window][bru]
+Pos=60,60
+Size=114,134
+Collapsed=0
+
+[Window][bruh]
+Pos=60,60
+Size=340,321
+Collapsed=0
+
+[Window][f]
+Pos=60,60
+Size=114,134
+Collapsed=0
+
+[Window][YO]
+Pos=442,213
+Size=234,214
+Collapsed=0
+
+[Window][New Button]
+Pos=123,102
+Size=335,202
+Collapsed=0
+
+[Window][Main Menu]
+Pos=60,60
+Size=114,157
+Collapsed=0
+
+[Window][Main Menu Button]
+Pos=99,70
+Size=370,221
+Collapsed=0
+
+[Window][fsdq]
+Pos=60,60
+Size=114,180
+Collapsed=0
+
+[Window][fdqsf]
+Pos=60,60
+Size=279,223
 Collapsed=0
 
