button edit name by im

--- a/Shape/imgui.ini
+++ b/Shape/imgui.ini
@@ -19,7 +19,7 @@ Size=303,220
 Collapsed=1
 
 [Window][UI]
-Pos=1544,658
+Pos=1542,661
 Size=307,210
 Collapsed=0
 
@@ -102,4 +102,159 @@ Collapsed=0
 Pos=60,60
 Size=279,223
 Collapsed=0
+
+[Window][NewButton]
+Pos=829,660
+Size=327,213
+Collapsed=0
+
+[Window][Among us]
+Pos=60,60
+Size=114,180
+Collapsed=0
+
+[Window][Amongus]
+Pos=60,60
+Size=114,180
+Collapsed=0
+
+[Window][Amongs]
+Pos=60,60
+Size=114,180
+Collapsed=0
+
+[Window][AmongUs]
+Pos=60,60
+Size=256,201
+Collapsed=0
+
+[Window][Ðá¯lú]
+Pos=60,60
+Size=323,246
+Collapsed=0
+
+[Window][Miaou]
+Pos=60,60
+Size=430,251
+Collapsed=0
+
+[Window][MainButton]
+Pos=34,417
+Size=341,233
+Collapsed=0
+
+[Window][S]
+Pos=781,121
+Size=269,263
+Collapsed=0
+
+[Window][Se]
+Pos=60,60
+Size=114,180
+Collapsed=0
+
+[Window][Sec]
+Pos=60,60
+Size=114,180
+Collapsed=0
+
+[Window][Seco]
+Pos=60,60
+Size=114,180
+Collapsed=0
+
+[Window][Secon]
+Pos=60,60
+Size=114,180
+Collapsed=0
+
+[Window][Second]
+Pos=60,60
+Size=114,180
+Collapsed=0
+
+[Window][SecondB]
+Pos=60,60
+Size=114,180
+Collapsed=0
+
+[Window][SecondBu]
+Pos=60,60
+Size=114,180
+Collapsed=0
+
+[Window][SecondBut]
+Pos=60,60
+Size=114,180
+Collapsed=0
+
+[Window][SecondButt]
+Pos=60,60
+Size=114,180
+Collapsed=0
+
+[Window][SecondButto]
+Pos=667,730
+Size=257,207
+Collapsed=0
+
+[Window][SecondButton]
+Pos=31,666
+Size=340,209
+Collapsed=1
+
+[Window][SecondButtoe]
+Pos=60,60
+Size=114,180
+Collapsed=0
+
+[Window][M]
+Pos=60,60
+Size=114,180
+Collapsed=0
+
+[Window][SeconddButton]
+Pos=60,60
+Size=114,180
+Collapsed=0
+
+[Window][sdqdsq]
+Pos=60,59
+Size=419,413
+Collapsed=0
+
+[Window][sdqdsqd]
+Pos=60,60
+Size=114,180
+Collapsed=0
+
+[Window][Second Button]
+Pos=60,60
+Size=431,208
+Collapsed=0
+
+[Window][Second Buttone]
+Pos=60,60
+Size=224,187
+Collapsed=0
+
+[Window][Second Buttonef]
+Pos=60,60
+Size=114,203
+Collapsed=0
+
+[Window][Second Buteton]
+Pos=60,60
+Size=114,180
+Collapsed=0
+
+[Window][Second Butetone]
+Pos=60,60
+Size=114,180
+Collapsed=0
+
+[Window][ThirdButton]
+Pos=28,724
+Size=276,208
+Collapsed=1
 
