--- a/Shape/imgui.ini
+++ b/Shape/imgui.ini
@@ -19,8 +19,8 @@ Size=303,220
 Collapsed=1
 
 [Window][UI]
-Pos=1543,662
-Size=307,210
+Pos=1559,652
+Size=296,210
 Collapsed=0
 
 [Window][Truc]
@@ -104,7 +104,7 @@ Size=279,223
 Collapsed=0
 
 [Window][NewButton]
-Pos=356,222
+Pos=356,225
 Size=327,455
 Collapsed=0
 
@@ -125,7 +125,7 @@ Collapsed=0
 
 [Window][AmongUs]
 Pos=60,60
-Size=256,201
+Size=364,473
 Collapsed=0
 
 [Window][Ðá¯lú]
@@ -139,7 +139,7 @@ Size=430,251
 Collapsed=0
 
 [Window][MainButton]
-Pos=100,251
+Pos=101,362
 Size=341,460
 Collapsed=0
 
@@ -199,9 +199,9 @@ Size=257,207
 Collapsed=0
 
 [Window][SecondButton]
-Pos=31,666
-Size=340,209
-Collapsed=1
+Pos=37,26
+Size=340,452
+Collapsed=0
 
 [Window][SecondButtoe]
 Pos=60,60
@@ -257,4 +257,14 @@ Collapsed=0
 Pos=28,724
 Size=276,208
 Collapsed=1
+
+[Window][dsqkfnlkn]
+Pos=60,60
+Size=534,389
+Collapsed=0
+
+[Window][MainMenu]
+Pos=60,60
+Size=250,208
+Collapsed=0
 
