--- a/Shape/imgui.ini
+++ b/Shape/imgui.ini
@@ -19,7 +19,7 @@ Size=303,220
 Collapsed=1
 
 [Window][UI]
-Pos=1559,650
+Pos=1559,652
 Size=296,210
 Collapsed=0
 
@@ -104,7 +104,7 @@ Size=279,223
 Collapsed=0
 
 [Window][NewButton]
-Pos=50,81
+Pos=420,40
 Size=327,455
 Collapsed=0
 
@@ -266,5 +266,40 @@ Collapsed=0
 [Window][MainMenu]
 Pos=473,65
 Size=365,315
+Collapsed=0
+
+[Window][Test1]
+Pos=150,441
+Size=281,281
+Collapsed=0
+
+[Window][test2]
+Pos=60,60
+Size=297,281
+Collapsed=0
+
+[Window][All]
+Pos=60,60
+Size=127,117
+Collapsed=0
+
+[Window][Button]
+Pos=60,60
+Size=79,65
+Collapsed=0
+
+[Window][text]
+Pos=287,67
+Size=265,202
+Collapsed=0
+
+[Window][all]
+Pos=60,60
+Size=79,82
+Collapsed=0
+
+[Window][button]
+Pos=60,60
+Size=79,65
 Collapsed=0
 
