--- a/Shape/imgui.ini
+++ b/Shape/imgui.ini
@@ -104,7 +104,7 @@ Size=279,223
 Collapsed=0
 
 [Window][NewButton]
-Pos=420,40
+Pos=500,308
 Size=327,455
 Collapsed=0
 
@@ -301,5 +301,20 @@ Collapsed=0
 [Window][button]
 Pos=60,60
 Size=79,65
+Collapsed=0
+
+[Window][Title]
+Pos=1489,140
+Size=379,427
+Collapsed=0
+
+[Window][Play]
+Pos=44,182
+Size=262,285
+Collapsed=0
+
+[Window][State]
+Pos=60,60
+Size=178,106
 Collapsed=0
 
