--- a/Shape/ConsoleApplication1.vcxproj.filters
+++ b/Shape/ConsoleApplication1.vcxproj.filters
@@ -122,5 +122,8 @@
     <ClInclude Include="Enemy.hpp">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="A_etoile.hpp">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
