--- a/Shape/ConsoleApplication1.vcxproj.filters
+++ b/Shape/ConsoleApplication1.vcxproj.filters
@@ -131,5 +131,8 @@
     <ClInclude Include="EnemySpawner.hpp">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="SpawnEnemy.hpp">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
