--- a/Shape/ConsoleApplication1.vcxproj
+++ b/Shape/ConsoleApplication1.vcxproj
@@ -157,6 +157,7 @@
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="EnemySpawner.cpp" />
     <ClCompile Include="Entities.cpp" />
+    <ClCompile Include="Fragment.cpp" />
     <ClCompile Include="HotReloadShader.cpp" />
     <ClCompile Include="Lib.cpp" />
     <ClCompile Include="libs\imgui-sfml\imgui-SFML.cpp" />
@@ -179,6 +180,7 @@
     <ClInclude Include="Enemy.hpp" />
     <ClInclude Include="EnemySpawner.hpp" />
     <ClInclude Include="Entities.hpp" />
+    <ClInclude Include="Fragment.hpp" />
     <ClInclude Include="Game.hpp" />
     <ClInclude Include="HotReloadShader.hpp" />
     <ClInclude Include="imconfig.h" />
