--- a/Shape/imgui.ini
+++ b/Shape/imgui.ini
@@ -304,12 +304,12 @@ Size=79,65
 Collapsed=0
 
 [Window][Title]
-Pos=1489,140
+Pos=1032,70
 Size=379,427
-Collapsed=0
+Collapsed=1
 
 [Window][Play]
-Pos=44,182
+Pos=1371,316
 Size=262,285
 Collapsed=0
 
@@ -321,5 +321,15 @@ Collapsed=0
 [Window][EnemySpawner]
 Pos=34,116
 Size=341,686
+Collapsed=0
+
+[Window][Resume]
+Pos=1269,272
+Size=457,327
+Collapsed=0
+
+[Window][Quit]
+Pos=552,360
+Size=555,297
 Collapsed=0
 
