update inGame hud

--- a/Shape/imgui.ini
+++ b/Shape/imgui.ini
@@ -14,12 +14,12 @@ Size=349,410
 Collapsed=0
 
 [Window][Player]
-Pos=1552,35
+Pos=785,31
 Size=340,443
-Collapsed=0
+Collapsed=1
 
 [Window][UI]
-Pos=1559,652
+Pos=1560,652
 Size=296,210
 Collapsed=0
 
@@ -104,8 +104,8 @@ Size=279,223
 Collapsed=0
 
 [Window][NewButton]
-Pos=500,308
-Size=327,455
+Pos=840,333
+Size=297,459
 Collapsed=0
 
 [Window][Among us]
@@ -304,24 +304,24 @@ Size=79,65
 Collapsed=0
 
 [Window][Title]
-Pos=1032,70
+Pos=936,73
 Size=379,427
-Collapsed=1
+Collapsed=0
 
 [Window][Play]
-Pos=1371,316
-Size=262,285
+Pos=1458,229
+Size=262,315
 Collapsed=0
 
 [Window][State]
-Pos=60,60
-Size=178,106
+Pos=968,78
+Size=261,255
 Collapsed=0
 
 [Window][EnemySpawner]
-Pos=34,116
+Pos=759,53
 Size=379,686
-Collapsed=0
+Collapsed=1
 
 [Window][Resume]
 Pos=1269,272
@@ -329,7 +329,82 @@ Size=457,327
 Collapsed=0
 
 [Window][Quit]
-Pos=552,360
-Size=555,297
+Pos=181,639
+Size=555,270
 Collapsed=0
+
+[Window][Score]
+Pos=1202,70
+Size=296,251
+Collapsed=1
+
+[Window][Resolution]
+Pos=421,55
+Size=297,281
+Collapsed=1
+
+[Window][ResolutionText]
+Pos=422,32
+Size=295,179
+Collapsed=1
+
+[Window][Bar]
+Pos=422,78
+Size=297,255
+Collapsed=1
+
+[Window][ScoreText]
+Pos=1199,37
+Size=298,329
+Collapsed=1
+
+[Window][CompTriangle]
+Pos=420,271
+Size=296,180
+Collapsed=1
+
+[Window][CompSquare]
+Pos=420,393
+Size=294,242
+Collapsed=1
+
+[Window][CompCircle]
+Pos=418,510
+Size=298,179
+Collapsed=1
+
+[Window][Skills]
+Pos=422,211
+Size=298,165
+Collapsed=1
+
+[Window][TriangleDesc]
+Pos=421,301
+Size=297,205
+Collapsed=1
+
+[Window][SquareDesc]
+Pos=421,418
+Size=298,218
+Collapsed=1
+
+[Window][CircleDesc]
+Pos=420,544
+Size=296,203
+Collapsed=1
+
+[Window][TriangleMap]
+Pos=419,331
+Size=292,213
+Collapsed=1
+
+[Window][SquareMap]
+Pos=422,453
+Size=295,65
+Collapsed=1
+
+[Window][CircleMap]
+Pos=421,574
+Size=296,211
+Collapsed=1
 
