--- a/Shape/imgui.ini
+++ b/Shape/imgui.ini
@@ -304,7 +304,7 @@ Size=79,65
 Collapsed=0
 
 [Window][Title]
-Pos=936,73
+Pos=1012,240
 Size=379,427
 Collapsed=0
 
@@ -407,4 +407,14 @@ Collapsed=1
 Pos=421,574
 Size=296,211
 Collapsed=1
+
+[Window][GameOver]
+Pos=192,113
+Size=263,175
+Collapsed=0
+
+[Window][Restart]
+Pos=1092,244
+Size=212,137
+Collapsed=0
 
