--- a/Shape/imgui.ini
+++ b/Shape/imgui.ini
@@ -15,11 +15,11 @@ Collapsed=0
 
 [Window][Player]
 Pos=1532,172
-Size=340,443
-Collapsed=0
+Size=373,443
+Collapsed=1
 
 [Window][UI]
-Pos=1552,824
+Pos=1553,825
 Size=296,210
 Collapsed=0
 
@@ -104,7 +104,7 @@ Size=279,223
 Collapsed=0
 
 [Window][NewButton]
-Pos=840,333
+Pos=474,291
 Size=297,459
 Collapsed=0
 
@@ -264,9 +264,9 @@ Size=534,389
 Collapsed=0
 
 [Window][MainMenu]
-Pos=473,65
+Pos=126,169
 Size=365,315
-Collapsed=0
+Collapsed=1
 
 [Window][Test1]
 Pos=150,441
@@ -304,14 +304,14 @@ Size=79,65
 Collapsed=0
 
 [Window][Title]
-Pos=1012,240
-Size=379,427
-Collapsed=0
+Pos=129,57
+Size=354,153
+Collapsed=1
 
 [Window][Play]
-Pos=1458,229
-Size=262,315
-Collapsed=0
+Pos=131,93
+Size=352,207
+Collapsed=1
 
 [Window][State]
 Pos=968,78
@@ -319,19 +319,19 @@ Size=261,255
 Collapsed=0
 
 [Window][EnemySpawner]
-Pos=1531,126
+Pos=1527,103
 Size=373,550
-Collapsed=0
+Collapsed=1
 
 [Window][Resume]
-Pos=1269,272
-Size=457,327
-Collapsed=0
+Pos=126,86
+Size=360,327
+Collapsed=1
 
 [Window][Quit]
-Pos=181,639
-Size=555,270
-Collapsed=0
+Pos=126,216
+Size=355,270
+Collapsed=1
 
 [Window][Score]
 Pos=1202,70
@@ -409,17 +409,22 @@ Size=296,211
 Collapsed=1
 
 [Window][GameOver]
-Pos=192,113
-Size=263,175
-Collapsed=0
+Pos=126,72
+Size=357,175
+Collapsed=1
 
 [Window][Restart]
-Pos=1092,244
-Size=212,137
-Collapsed=0
+Pos=125,127
+Size=357,137
+Collapsed=1
 
 [Window][Bloom]
 Pos=1530,72
-Size=369,149
+Size=376,149
+Collapsed=1
+
+[Window][Credit]
+Pos=130,123
+Size=355,191
 Collapsed=1
 
