commit before trying to read whitespace

--- a/Shape/imgui.ini
+++ b/Shape/imgui.ini
@@ -19,7 +19,7 @@ Size=373,443
 Collapsed=1
 
 [Window][UI]
-Pos=1553,825
+Pos=1528,670
 Size=296,210
 Collapsed=0
 
@@ -104,7 +104,7 @@ Size=279,223
 Collapsed=0
 
 [Window][NewButton]
-Pos=474,291
+Pos=526,420
 Size=297,459
 Collapsed=0
 
@@ -305,7 +305,7 @@ Collapsed=0
 
 [Window][Title]
 Pos=129,57
-Size=354,153
+Size=354,242
 Collapsed=1
 
 [Window][Play]
@@ -319,9 +319,9 @@ Size=261,255
 Collapsed=0
 
 [Window][EnemySpawner]
-Pos=1527,103
+Pos=1531,102
 Size=373,550
-Collapsed=1
+Collapsed=0
 
 [Window][Resume]
 Pos=126,86
@@ -427,4 +427,44 @@ Collapsed=1
 Pos=130,123
 Size=355,191
 Collapsed=1
+
+[Window][Musics]
+Pos=126,218
+Size=368,439
+Collapsed=1
+
+[Window][MainMenuMusic]
+Pos=127,341
+Size=368,356
+Collapsed=1
+
+[Window][InGameMusic]
+Pos=127,383
+Size=366,170
+Collapsed=0
+
+[Window][VFX]
+Pos=123,479
+Size=366,205
+Collapsed=0
+
+[Window][VFXs]
+Pos=122,562
+Size=368,312
+Collapsed=1
+
+[Window][ShootVFX]
+Pos=123,796
+Size=373,189
+Collapsed=0
+
+[Window][ExplosionVFX]
+Pos=118,641
+Size=371,118
+Collapsed=0
+
+[Window][Me]
+Pos=130,250
+Size=352,238
+Collapsed=0
 
