whitespacesFixed + UI upgrade

--- a/Shape/imgui.ini
+++ b/Shape/imgui.ini
@@ -264,7 +264,7 @@ Size=534,389
 Collapsed=0
 
 [Window][MainMenu]
-Pos=126,169
+Pos=126,170
 Size=365,315
 Collapsed=1
 
@@ -321,7 +321,7 @@ Collapsed=0
 [Window][EnemySpawner]
 Pos=1531,102
 Size=373,550
-Collapsed=0
+Collapsed=1
 
 [Window][Resume]
 Pos=126,86
@@ -429,19 +429,19 @@ Size=355,191
 Collapsed=1
 
 [Window][Musics]
-Pos=126,218
+Pos=126,245
 Size=368,439
 Collapsed=1
 
 [Window][MainMenuMusic]
-Pos=127,341
+Pos=125,293
 Size=368,356
 Collapsed=1
 
 [Window][InGameMusic]
-Pos=127,383
+Pos=129,332
 Size=366,170
-Collapsed=0
+Collapsed=1
 
 [Window][VFX]
 Pos=123,479
@@ -449,22 +449,27 @@ Size=366,205
 Collapsed=0
 
 [Window][VFXs]
-Pos=122,562
+Pos=130,387
 Size=368,312
 Collapsed=1
 
 [Window][ShootVFX]
-Pos=123,796
-Size=373,189
-Collapsed=0
+Pos=130,430
+Size=373,190
+Collapsed=1
 
 [Window][ExplosionVFX]
-Pos=118,641
-Size=371,118
-Collapsed=0
+Pos=129,474
+Size=371,228
+Collapsed=1
 
 [Window][Me]
-Pos=130,250
+Pos=129,205
 Size=352,238
-Collapsed=0
+Collapsed=1
+
+[Window][TYFP]
+Pos=129,503
+Size=370,271
+Collapsed=1
 
