--- a/Shape/ConsoleApplication1.vcxproj
+++ b/Shape/ConsoleApplication1.vcxproj
@@ -154,7 +154,7 @@
     <ClCompile Include="Background.cpp" />
     <ClCompile Include="Bloom.cpp" />
     <ClCompile Include="Button.cpp" />
-    <ClCompile Include="Shape.cpp" />
+    <ClCompile Include="Main.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="EnemySpawner.cpp" />
     <ClCompile Include="Entities.cpp" />
