--- a/Shape/imgui.ini
+++ b/Shape/imgui.ini
@@ -14,14 +14,14 @@ Size=349,410
 Collapsed=0
 
 [Window][Player]
-Pos=1527,508
+Pos=1542,684
 Size=373,283
 Collapsed=0
 
 [Window][UI]
-Pos=1528,836
-Size=344,210
-Collapsed=0
+Pos=1556,1009
+Size=346,378
+Collapsed=1
 
 [Window][Truc]
 Pos=184,172
@@ -104,7 +104,7 @@ Size=279,223
 Collapsed=0
 
 [Window][NewButton]
-Pos=526,420
+Pos=462,536
 Size=297,459
 Collapsed=0
 
@@ -319,9 +319,9 @@ Size=261,255
 Collapsed=0
 
 [Window][EnemySpawner]
-Pos=1513,105
-Size=344,355
-Collapsed=0
+Pos=1533,82
+Size=344,496
+Collapsed=1
 
 [Window][Resume]
 Pos=126,86
@@ -334,9 +334,9 @@ Size=355,270
 Collapsed=1
 
 [Window][Score]
-Pos=1123,61
-Size=354,251
-Collapsed=0
+Pos=1125,73
+Size=369,251
+Collapsed=1
 
 [Window][Resolution]
 Pos=421,55
@@ -359,52 +359,52 @@ Size=352,329
 Collapsed=1
 
 [Window][CompTriangle]
-Pos=420,271
+Pos=417,446
 Size=296,180
 Collapsed=1
 
 [Window][CompSquare]
-Pos=420,393
+Pos=419,586
 Size=294,242
 Collapsed=1
 
 [Window][CompCircle]
-Pos=418,510
+Pos=421,754
 Size=298,179
 Collapsed=1
 
 [Window][Skills]
-Pos=422,211
+Pos=427,176
 Size=298,165
 Collapsed=1
 
 [Window][TriangleDesc]
-Pos=421,301
+Pos=413,471
 Size=297,205
 Collapsed=1
 
 [Window][SquareDesc]
-Pos=421,418
+Pos=417,613
 Size=298,218
 Collapsed=1
 
 [Window][CircleDesc]
-Pos=420,544
+Pos=421,786
 Size=296,203
 Collapsed=1
 
 [Window][TriangleMap]
-Pos=419,331
+Pos=420,495
 Size=292,213
 Collapsed=1
 
 [Window][SquareMap]
-Pos=422,453
+Pos=419,641
 Size=295,65
 Collapsed=1
 
 [Window][CircleMap]
-Pos=421,574
+Pos=422,810
 Size=296,211
 Collapsed=1
 
@@ -471,5 +471,100 @@ Collapsed=1
 [Window][TYFP]
 Pos=129,503
 Size=370,271
+Collapsed=1
+
+[Window][HighScore1]
+Pos=1131,284
+Size=362,197
+Collapsed=1
+
+[Window][HighScoreText]
+Pos=1125,205
+Size=360,219
+Collapsed=1
+
+[Window][HighScore2]
+Pos=1135,323
+Size=351,136
+Collapsed=1
+
+[Window][HighScore3]
+Pos=1135,356
+Size=349,134
+Collapsed=1
+
+[Window][HighScore4]
+Pos=1138,400
+Size=352,158
+Collapsed=1
+
+[Window][HighScore5]
+Pos=1143,444
+Size=355,154
+Collapsed=1
+
+[Window][Bar1]
+Pos=420,93
+Size=301,95
+Collapsed=1
+
+[Window][Bar2]
+Pos=1133,516
+Size=355,223
+Collapsed=1
+
+[Window][SkillTime]
+Pos=428,313
+Size=300,193
+Collapsed=1
+
+[Window][SkillTimeText]
+Pos=430,847
+Size=299,174
+Collapsed=0
+
+[Window][SkillTimeText1]
+Pos=425,341
+Size=295,169
+Collapsed=1
+
+[Window][SkillTimeText2]
+Pos=433,369
+Size=294,196
+Collapsed=1
+
+[Window][TutoBinds]
+Pos=1151,693
+Size=336,193
+Collapsed=0
+
+[Window][Controls]
+Pos=1136,544
+Size=348,237
+Collapsed=1
+
+[Window][ControlsText1]
+Pos=1130,581
+Size=348,199
+Collapsed=1
+
+[Window][ControlsText2]
+Pos=1127,616
+Size=333,163
+Collapsed=1
+
+[Window][ControlsText3]
+Pos=1130,653
+Size=329,169
+Collapsed=1
+
+[Window][ControlsText4]
+Pos=1127,687
+Size=343,219
+Collapsed=1
+
+[Window][ControlsText5]
+Pos=1134,727
+Size=344,171
 Collapsed=1
 
