--- a/cours_10/imgui.ini
+++ b/cours_10/imgui.ini
@@ -9,7 +9,12 @@ Size=550,680
 Collapsed=0
 
 [Window][debug]
-Pos=1242,349
+Pos=1467,302
 Size=263,390
+Collapsed=0
+
+[Window][Shader]
+Pos=107,71
+Size=443,584
 Collapsed=0
 
